# Tarea-1-EDA

clustering/: data_eda.npy  queries_eda.npy  simsearch.md
clustering/cpp/: CMakeLists.txt  Makefile  test.cpp
clustering/cpp/include/: cluster.hpp  matrix.hpp  simsearch.hpp  utils.hpp
clustering/cpp/src/: cluster.cpp  matrix.cpp  simsearch.cpp  utils.cpp
clustering/python/: vectors.py
rb_tree/: test.cpp
